# micore

./: .gitignore  pyproject.toml
src/micore/: __init__.py
src/micore/io/: excel.py
