[project]
name = "micore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ffsedd", email = "ffsedd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
micore = "micore:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
